objects/FSL__FSL_Operation__c.object
<CustomObject>
    <fields>
        <fullName>FSL__Finished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finished</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Future_Method_Id__c</fullName>
        <label>Future Method Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiator</label>
        <referenceTo>ServiceAppointment</referenceTo>
        <relationshipLabel>FSL Operations</relationshipLabel>
        <relationshipName>FSL_Operations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSL__Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>UnSchedule</fullName>
                </value>
                <value>
                    <fullName>Get Candidates</fullName>
                </value>
                <value>
                    <fullName>Appointment Booking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__ResultText__c</fullName>
        <label>ResultText</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSL__featureMetric__c</fullName>
        <label>Feature Metric</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>FSL Operation</label>
    <nameField>
        <label>FSL Operation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL Operations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>